# aligo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  upload_test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml  python-publish.yml  python-test.yml  star_notify.py  star_notify.yml  started-notify.yml  started_notify.yml  update-version.py  update_version.py
aligo/: __init__.py
aligo/apis/: Album.py  Aligo.py  Audio.py  Copy.py  Core.py  Create.py  CustomShare.py  Download.py  Drive.py  Duplicate.py  File.py  Move.py  Other.py  Recyclebin.py  Search.py  Share.py  Star.py  SyncFolder.py  Update.py  Video.py  __init__.py
aligo/auth/: Auth.py  BaseClass.py  __init__.py
aligo/config/: Config.py  __init__.py
aligo/core/: Album.py  Audio.py  AudioInfo.py  Auth.py  Base.py  BaseAligo.py  BaseClass.py  Client.py  Compress.py  Config.py  Copy.py  CopyFile.py  Core.py  Create.py  CreateFile.py  Download.py  Drive.py  DriveInfo.py  Duplicate.py  EMail.py  File.py  FileList.py  LatestClient.py  LoginServer.py  Move.py  MoveFile.py  Other.py  PersonalInfo.py  Recyclebin.py  Search.py  Share.py  Star.py  Update.py  User.py  Video.py  VideoInfo.py  __init__.py
aligo/error/: __init__.py
examples/: example-01 快速入门.py  example-02 多用户登录.py  example-03 上传桌面指定文件夹.py  example-04 下载指定文件夹.py  example-05 上传文件到指定网盘位置.py  example-05 上传文件到指定网盘位置2.py  example-06 查看某个文件是否存在.py  example-07 在线解压缩.py  example-07 在网页中扫描登录二维码.py  example-08 自定义功能 - 订阅相关.py  example-09 自定义发送邮件的邮箱.py  example-10 福利码兑换.py  example-11 大文件清理功能 需 VIP.py  example-12 从分享字符串中提取 Share 信息.py  example-13 获取相册的 drive_id.py  example-14 相册相关API.py  example-15 文件遍历示例 walk_files.py  example-16 导出分享中所有文件信息.py  example-17 保存分享中所有文件.py  example-18 直接下载分享中的文件.py  example-19 取消分享.py  example-20 自定义分享.py  example-21 自动签到.py  example-22 应对限速问题.py  example-23 支持直接上传 bytes 数据.py
images/: old_readme.md
tests/: __init__.py  test_CopyFile.py  test_CreateFile.py  test_Download.py  test_DriveInfo.py  test_FileList.py  test_LatestClient.py  test_MoveFile.py  test_Other.py  test_PersonalInfo.py  test_PlayInfo.py  test_Recyclebin.py  test_Search.py  test_Share.py  test_Star.py  test_Update.py  upload_test.txt
(+335 files in other folders)
