[metadata]
name = aligo
version = attr: aligo.__version__
author = foyou
author_email = yimi.0822@qq.com
description = aliyundrive apis package
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/foyoux/aligo
project_urls =
    Source = https://github.com/foyoux/aligo
    Bug Tracker = https://github.com/foyoux/aligo/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 5 - Production/Stable
keywords = aligo aliyun drive aliyundrive cloud pcs aliyunpan
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7.*
install_requires =
    requests
    qrcode[pil]
    coloredlogs
    tqdm>=4.50.0
    qrcode_terminal
    typing_extensions
[options.packages.find]
where = .
exclude =
    tests
    tests.apis
    tests.core
